# scala-rust-playground

./: .envrc.example  .gitignore  Makefile  README.md  build.sbt  hello.h  jniconfig  playground.h  run_jvm.sh  run_native.sh  run_native_jna.sh
hello-rs/: Cargo.toml
hello-rs/migrations/2018-09-13-121907_create_posts/: up.sql
hello-rs/src/: db.rs  driver.rs  lib.rs  main.rs  purepg.rs
project/: Dependencies.scala  scalapb.sbt
protobuf/: rpc.proto
rust/: Cargo.toml  build.rs
rust/src/: ffi_utils.rs  lib.rs  protobuf.rs
src/main/java/example/: CIntegration.java  RustInterfaceGraal.java  RustInterfaceJna.java
src/main/java/io/prisma/playground/: CIntegration.java  RustInterfaceGraal.java
src/main/resources/: hello.h
src/main/rust/: hello.rs
src/main/scala/example/: CustomJdbcConnection.scala  CustomJdbcDriver.scala  CustomPreparedStatement.scala  DefaultValue.scala  Hello.scala  JsonResultSet.scala  RustConnection.scala  RustInterface.scala  RustInterfaceJna.scala
src/main/scala/io/prisma/playground/: Main.scala
