[lib]
crate-type = ["staticlib"]

[package]
name = "playground"
version = "0.1.0"
authors = [""]
edition = '2018'

[dependencies]
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
prost = "0.4"
prost-derive = "0.4"
prost-types = "0.4"
bytes = "0.4"
lazy_static = "1.2"

[build-dependencies]
prost-build = "0.4"
